tests/ui/issues/issue-62480.stderr
error[E0767]: use of unreachable label `'a`
  --> $DIR/issue-62480.rs:6:18
   |
LL |     'a: {
   |     -- unreachable label defined here
LL |         || break 'a
   |                  ^^ unreachable label `'a`
   |
   = note: labels are unreachable through functions, closures, async blocks and modules

error[E0267]: `break` inside of a closure
  --> $DIR/issue-62480.rs:6:12
   |
LL |         || break 'a
   |         -- ^^^^^^^^ cannot `break` inside of a closure
   |         |
   |         enclosing closure

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0267, E0767.
For more information about an error, try `rustc --explain E0267`.
